--- a/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
@@ -1,5 +1,10 @@
 //Run your own road feature
 #homepage-ryor {
+    background: url('../media/RYOR_bg.jpg') ;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     margin-top: 8px;
     margin-top: torem(8);
     margin-bottom: toem(8);
@@ -7,7 +12,6 @@
     padding: 0;
     position: relative;
     .feature-heading { 
-        
         margin: 0 0 toem(10, $small-unit);
         margin: 0 0 torem(10, $small-unit);
     }
@@ -24,12 +28,13 @@
         font-weight: 700;
         margin: 0 0 toem(35, $small-unit);
         margin: 0 0 torem(35, $small-unit);
-
     }
     .feature-heading, .feature-heading-sub, .feature-text {
         text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.77);
+        position: relative;
+        z-index: 5;
     }
-    .homepage-btn {
+    .homepage-btn:not(.ryor-md-button) {
         position: relative;
         bottom: calc(20px);
         right: calc(15px);
@@ -39,14 +44,14 @@
 
 .ryor-student-image {
     @include img-responsive ;
-   
-    position: relative;
+    overflow: hidden;
+    position: absolute;
     top: 0;
     left: 0; 
     z-index: 0;
 }
 /* IMage gradient overlay */
-.ryor-student::before {
+.ryor-student-image::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -62,24 +67,36 @@
 .ryor-student {
     padding-top: 32px;
     padding-top: torem(32);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    overflow: hidden;
 }
-.ryor-image {
-     background: url('../media/RYOR_bg.jpg') no-repeat ;
-    color: $white;
-    overflow: visible;
-    svg { 
-        min-height: 300px;
-        min-width: 300px;
-    }
-}
-.ryor-student, .ryor-image {
+.ryor-student, .ryor-image, .ryor-image-mobile {
     @include make-xs-column(12);   
     z-index: 2;
 }
+.ryor-image-mobile {
+     
+    color: $white;
+    overflow: visible;
+    svg { 
+        fill: $white;
+        min-height: 200px;
+        min-width: 300px;
+        position: absolute; 
+        top: calc(-20px);
+    }
+    min-height: 150px;
+}
+.ryor-image {
+     
+    color: $white;
+    overflow: visible;
+    svg { 
+        min-height: 200px;
+        min-width: 300px;
+
+    }
+}
+
 
 @media (min-width: $screen-md-min) {    
     #homepage-ryor {
@@ -103,18 +120,29 @@
             margin-bottom: torem(30);
             line-height: 1.2;
         }
-        .homepage-btn {
-            float: left;
-            left: calc(15px);
+        .main-button { 
+            text-align: left; 
+            padding: 0 25px;
+            
         }
     }
     .ryor-image {
-        @include make-md-column(5);
-        text-align: right;
+        height: 200px;
+        width: 100%;
+        padding: 0;
+        margin: 20px auto;
+        width: 41.6666%;
+        text-align: center;
+        
+        svg {
+            width: 100%;
+            
+        }
     }
     .ryor-student {
-        @include make-md-column(7);
-        padding-top: 48px;
-        padding-top: torem(48);
+        @include make-md-column(7, 50px);
+        padding-bottom: 2rem;
+        
     }
+    .ryor-student-image::before { display: none;}
 }
