--- a/www-root/includes/homepage-events.html
+++ b/www-root/includes/homepage-events.html
@@ -71,7 +71,7 @@
             <!-- ** // Event ** -->
             
         </div><!-- // .home-events-row -->
-        <a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events <i class="fa fa-angle-right fa-lg"></i></a>
+        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events</a> <i class="fa fa-angle-right fa-lg"></i></p>
     </div><!-- // .home-events (col) -->
     
 </section>
