--- a/www-root/includes/homepage-news.html
+++ b/www-root/includes/homepage-news.html
@@ -41,9 +41,8 @@
                      </div><!-- ./ .news-feature-item -->
                 </div><!-- ./ .news-feature-items-wrap -->    
             </div><!-- ./ .news-feature-item --> 
-            <a href="javascript:void(0)" class="btn homepage-btn">Read more roadrunner stories <i class="fa fa-angle-right fa-lg"></i></a>
         </div><!-- ./ .news-feature-items -->
-        
+        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more roadrunner stories</a> <i class="fa fa-angle-right fa-lg"></i></p>
     </div><!-- ./ .homepage-news-outer-col -->
 </section>
 <!-- ** .// Homepage news ** -->
