--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -30,8 +30,8 @@
           <div class="">
             <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
               <li id="nav-faculty">
-                <a class="mobile-header">About</a>
-                <ul class="pushdown-menu">
+                <a class="mobile-header mobile-about">About</a>
+                <ul class="pushdown-menu pushdown-about">
                   <li><a href="#">About</a></li>
                   <li><a href="#">Strategic Plan 2020</a></li>
                   <li><a href="#">Office of the President</a></li>
@@ -48,8 +48,8 @@
                  </ul>
                </li>
                <li id="nav-admissions">
-                 <a class="mobile-header">Prospective Students</a>
-                 <ul class="pushdown-menu">
+                 <a class="mobile-header mobile-ps">Prospective Students</a>
+                 <ul class="pushdown-menu pushdown-ps">
                    <li><a href="#">Prospective Students</a></li>
                    <li><a href="#">First-Time Undergraduate</a></li>
                    <li><a href="#">Transfer Students</a></li>
@@ -65,8 +65,8 @@
                  </ul>
                </li>
                <li id="nav-academics">
-                 <a class="mobile-header">Academics</a>
-                 <ul class="pushdown-menu">
+                 <a class="mobile-header mobile-academics">Academics</a>
+                 <ul class="pushdown-menu pushdown-academics">
                    <li><a href="/programs/">Academic Programs</a></li>
                    <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
                    <li><a href="/cps/">College of Professional Studies</a></li>
@@ -81,8 +81,8 @@
                  </ul>
                </li>
                <li id="nav-campus">
-                 <a class="mobile-header">Campus Life</a>
-                 <ul class="pushdown-menu">
+                 <a class="mobile-header mobile-campus">Campus Life</a>
+                 <ul class="pushdown-menu pushdown-campus">
                    <li><a href="/campuslife/">Campus Life</a></li>
                    <li><a href="/studentactivities/">Student Activities</a></li>
                    <li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li>
@@ -98,8 +98,8 @@
                  </ul>
                </li>
                <li id="nav-alumni">
-                 <a class="mobile-header menu-last">Alumni</a>
-                 <ul class="pushdown-menu">
+                 <a class="mobile-header mobile-alumni menu-last">Alumni</a>
+                 <ul class="pushdown-menu pushdown-alumni">
                    <li><a href="/alumni/">Alumni</a></li>
                    <li><a href="/alumni/careerservices/">Career Services</a></li>
                    <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
@@ -213,10 +213,28 @@ $('.navbar-toggle').click(function(){
 });
 
 // when menu item clicked, open/close pushdown menu
-$('.mobile-header').click(function(){
-   $('.pushdown-menu').slideToggle();
-});
-
+if ($(window).width() > 991) {
+  $('.mobile-header').click(function(){
+     $('.pushdown-menu').slideToggle();
+  });
+}
+else {
+  $('.mobile-about').click(function(){
+     $('.pushdown-about').slideToggle();
+  });
+  $('.mobile-ps').click(function(){
+     $('.pushdown-ps').slideToggle();
+  });
+  $('.mobile-academics').click(function(){
+     $('.pushdown-academics').slideToggle();
+  });
+  $('.mobile-campus').click(function(){
+     $('.pushdown-campus').slideToggle();
+  });
+  $('.mobile-alumni').click(function(){
+     $('.pushdown-alumni').slideToggle();
+  });
+};
 // open/close content-nav bar when search/close glyphs clicked
 $('.search-desktop').click(function(){
    $('#content-nav').css('max-height', '55px');
