Final updates from client

--- a/development/terminalfour/src/html/includes/footer.html
+++ b/development/terminalfour/src/html/includes/footer.html
@@ -100,7 +100,9 @@
                       </div><!-- .campus-info  -->
 
                       <div class="footer-logo">
-                          <p><a href="javascript:void(0)"> <img src="style-assets/media/msudenver-informal_logo.png"></a></p>
+                          <p><a href="javascript:void(0)"> 
+                            <img src="style-assets/media/msudenver_informal.svg" alt="MSU logo" />
+                          </a></p>
                           <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
 
                       </div><!-- .footer-logo -->
