--- a/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
@@ -1,6 +1,6 @@
 //Run your own road feature
 #homepage-ryor {
-    background: url('../media/RYOR_bg.jpg') ;
+    background: url('../media/RYOR_bg_extended.png') ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
