--- a/www-root/includes/homepage-news.html
+++ b/www-root/includes/homepage-news.html
@@ -6,6 +6,7 @@
         <div class="news-features">
              <!-- featured featured news item -->
             <div class="news-feature news-feature__large" data-mh="home-news"> 
+               <a href="javascript:void(0)">
                 <div class="news-feature-bg" data-mh="home-news">
                     <div class="news-feature-image">
                         <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />    
@@ -14,7 +15,9 @@
                         <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
                         <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor dolor lorem, eget ultricies sapien hendrerit id. Suspendisse fringilla diam congue placerat consectetur.</p>
                     </div>
+                    
                 </div>
+                </a>
             </div><!-- ./ .news-feature-item.featured -->
             <!-- regular featured news items -->
             <div class="news-features__small" data-mh="home-news"> 
