--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7878,6 +7878,9 @@ header {
 #homepage-news p {
   color: #fff;
 }
+#homepage-news a:hover, #homepage-news a:active, #homepage-news a:focus {
+  text-decoration: none;
+}
 
 @media (max-width: 767px) {
   .homepage-btn.homepage-btn__small {
@@ -7960,7 +7963,10 @@ header {
 .news-feature-bg {
   padding: 15px;
   padding: 0.9375rem;
-  background: #000;
+  background: rgba(0, 0, 0, 0.5);
+}
+.news-feature-bg:hover, .news-feature-bg:active, .news-feature-bgfocus {
+  background: black;
 }
 .news-feature-bg:before, .news-feature-bg:after {
   content: " ";
@@ -8255,6 +8261,9 @@ header {
 #homepage-events {
   background: url("../media/eventsbg_mobile.jpg");
 }
+#homepage-events a:hover, #homepage-events a:active, #homepage-events a:focus {
+  text-decoration: none;
+}
 
 /* Events grid */
 .home-events {
@@ -8297,6 +8306,9 @@ header {
   padding: 0.9375rem;
   background-color: #000;
   background-color: rgba(0, 0, 0, 0.6);
+}
+.event-bg:hover, .event-bg:active, .event-bgfocus {
+  background: black;
 }
 
 .home-event-image {
@@ -8385,17 +8397,8 @@ footer {
 }
 
 /* For the background color gradient in mobile */
-@media (max-width: 1199px) {
+@media (max-width: 991px) {
   .footer-bg-mob {
-    /* http://colorzilla.com/gradient-editor/#003a6e+0,7db9e8+100&1+0,0+100 */
-    background: -webkit-linear-gradient(#003a6e 0%, #538ebf 90%, rgba(125, 185, 232, 0) 100%);
-    background: -o-linear-gradient(#003a6e 0%, #538ebf 90%, rgba(125, 185, 232, 0) 100%);
-    background: linear-gradient(#003a6e 0%, #538ebf 90%, rgba(125, 185, 232, 0) 100%);
-    /* FF3.6-15 */
-    /* Chrome10-25,Safari5.1-6 */
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003a6e', endColorstr='#007db9e8',GradientType=0 );
-    /* IE6-9 */
     background-color: #003a6e;
   }
 }
@@ -8404,7 +8407,7 @@ footer {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
-  padding-bottom: 260px;
+  padding-bottom: 48px;
 }
 .footer-container:before, .footer-container:after {
   content: " ";
@@ -8419,7 +8422,7 @@ footer {
 
 /* Used inbetween html rows in the footer */
 .footer-row-hr {
-  border-top-width: 4px;
+  border-top-width: 2px;
   margin: 0;
 }
 
@@ -8571,6 +8574,11 @@ footer {
   text-align: center;
 }
 
+.footer-logo-img {
+  margin: 0 auto;
+  max-width: 250px;
+}
+
 .footer-social {
   display: flex;
   justify-content: space-between;
@@ -8603,7 +8611,7 @@ footer {
     padding-right: 15px;
   }
 }
-@media (min-width: 768px) and (min-width: 1200px) {
+@media (min-width: 768px) and (min-width: 768px) {
   .footer-promo {
     float: left;
     width: 33.33333%;
@@ -8611,6 +8619,10 @@ footer {
 }
 
 @media (min-width: 768px) {
+  .footer-logo-img {
+    max-width: 180px;
+  }
+
   .footer-promo-heading {
     font-size: 25px;
     font-size: 1.5625rem;
@@ -8682,6 +8694,10 @@ footer {
   }
 }
 @media (min-width: 1200px) {
+  footer .homepage-btn {
+    float: right;
+  }
+
   .footer-container {
     padding-left: 8.33333%;
     padding-right: 8.33333%;
