--- a/www-root/includes/footer.html
+++ b/www-root/includes/footer.html
@@ -95,13 +95,13 @@
                                     <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-flickr fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a></li>
-                            </ul>
+                            </ul> 
 
                       </div><!-- .campus-info  -->
 
                       <div class="footer-logo">
                           <p><a href="javascript:void(0)"> 
-                            <img src="style-assets/media/msudenver_informal.svg" alt="MSU logo" />
+                            <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
                           </a></p>
                           <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
 
