--- a/www-root/includes/homepage-events.html
+++ b/www-root/includes/homepage-events.html
@@ -6,66 +6,78 @@
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
+                   <a href="javascript:void(0)">
+                        <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
+                        <h2 class="home-event-title">New Student Convocation</h2>
+                        <p class="home-event-date">August 18th at 5:30 PM</p>
+                        <hr />
+                        <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
+                   <a href="javascript:void(0)">
+                        <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
+                        <h2 class="home-event-title">New Student Convocation</h2>
+                        <p class="home-event-date">August 18th at 5:30 PM</p>
+                        <hr />
+                        <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
+                   <a href="javascript:void(0)">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
                     <p class="home-event-date">August 18th at 5:30 PM</p>
                     <hr />
                     <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
+                   <a href="javascript:void(0)">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
                     <p class="home-event-date">August 18th at 5:30 PM</p>
                     <hr />
                     <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
+                   <a href="javascript:void(0)">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
                     <p class="home-event-date">August 18th at 5:30 PM</p>
                     <hr />
                     <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
+                   <a href="javascript:void(0)">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
                     <p class="home-event-date">August 18th at 5:30 PM</p>
                     <hr />
                     <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
