--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -26,21 +26,20 @@ header {
 @import "msu-partials/msu-utils";
 @import "msu-partials/footer";
 
-
-// @import "ContentTypes/MainHeaderNavigation";
-// @import "ContentTypes/variables";
-// @import "ContentTypes/content";
-// @import "ContentTypes/navmenu";
-// @import "ContentTypes/TableStyles";
-// @import "ContentTypes/AdmissionsStyles";
-// @import "ContentTypes/PresidentMessages";
-// @import "ContentTypes/HighlightBox";
-// @import "ContentTypes/CallsToAction";
-// @import "ContentTypes/ExpertProfiles";
-// @import "ContentTypes/hero";
-// @import "ContentTypes/newsroom";
-// @import "ContentTypes/panel";
-// @import "ContentTypes/footer";
-// @import "ContentTypes/SiteHeader";
-// @import "ContentTypes/stylestoimport";
-// @import "ContentTypes/card";
+/**  ContentType Styles **/
+@import "ContentTypes/variables";
+@import "ContentTypes/content";
+@import "ContentTypes/navmenu";
+@import "ContentTypes/TableStyles";
+@import "ContentTypes/AdmissionsStyles";
+@import "ContentTypes/PresidentMessages";
+@import "ContentTypes/HighlightBox";
+@import "ContentTypes/CallsToAction";
+@import "ContentTypes/ExpertProfiles";
+@import "ContentTypes/hero";
+@import "ContentTypes/newsroom";
+@import "ContentTypes/panel";
+@import "ContentTypes/footer";
+@import "ContentTypes/SiteHeader";
+@import "ContentTypes/stylestoimport";
+@import "ContentTypes/card";
